--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html long= "pt-br">
     <head>
        <meta charset= "UTF-8">
-       <title> docu lista</title>
+       <title> gabriele cristina</title>
     </head>
     <body>
       <al>
